added some configuration and change the ui with datetime

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -2,18 +2,60 @@
 unbind C-b
 set -g prefix C-a
 
+# Reload tmux config
 unbind r
 bind r source-file ~/.tmux.conf \; display "Reloaded ~/.tmux.conf"
 
-bind -n M-H previous-window
-bind -n M-L next-window
+## Use Alt + `vim motion (hjkl)` keys to switch panes or windows
 
-# set -g default-terminal "tmux-256color"
+# this is old configuration.
+#bind -n M-H previous-window
+#bind -n M-L next-window
+#bind -n M-h select-pane -L
+#bind -n M-l select-pane -R
+
+# this key binding will check if there is no pane at left or right, then it will switch to window
+bind -n M-h run-shell "if [ $(tmux display-message -p '#{pane_at_left}') -ne 1 ]; then tmux select-pane -L; else tmux select-window -p; fi"
+bind -n M-l run-shell "if [ $(tmux display-message -p '#{pane_at_right}') -ne 1 ]; then tmux select-pane -R; else tmux select-window -n; fi"
+
+bind -n M-k select-pane -U
+bind -n M-j select-pane -D
+
+
+# override default terminal colors
+# *it was has different color of tmux between default terminal color
 set -g default-terminal "xterm-256color"
 set-option -ga terminal-overrides ",xterm-256color:Tc"
-# set-option -as terminal-overrides ",xterm-256color:Tc"
+
 set -g mouse on
 set -g mode-keys vi
+
+set -sg escape-time 10
+
+# split panes using | and -, make sure they open in the same path
+bind | split-window -h -c "#{pane_current_path}"
+bind - split-window -v -c "#{pane_current_path}"
+unbind '"'
+unbind %
+
+set-option -g allow-rename off
+
+# start with window 1 (instead of 0)
+set -g base-index 1
+
+# start with pane 1
+set -g pane-base-index 1
+
+# open new windows in the current path
+bind c new-window -c "#{pane_current_path}"
+
+# bind `p` key to switch to the previous window
+unbind p
+bind p previous-window
+
+#################################
+### PLUGIN WITH THEME CHANGES ###
+#################################
 
 # List of plugins
 set -g @plugin 'catppuccin/tmux'
@@ -26,26 +68,9 @@ set -g @plugin 'tmux-plugins/tmux-sensible'
 # set -g @plugin 'git@github.com:user/plugin'
 # set -g @plugin 'git@bitbucket.com:user/plugin'
 
-# # catppuccin config theme
-set -g @catppuccin_window_left_separator "█"
-set -g @catppuccin_window_right_separator "█ "
-set -g @catppuccin_window_number_position "right"
-set -g @catppuccin_window_middle_separator "  █"
-
-set -g @catppuccin_window_default_fill "number"
-
-set -g @catppuccin_window_current_fill "number"
-set -g @catppuccin_window_current_text "#{pane_current_path}"
-
+# catppuccin config
+set -g @catppuccin_flavour 'mocha'
 set -g @catppuccin_status_modules_right "application session date_time"
-set -g @catppuccin_status_left_separator  ""
-set -g @catppuccin_status_right_separator " "
-set -g @catppuccin_status_right_separator_inverse "yes"
-set -g @catppuccin_status_fill "all"
-set -g @catppuccin_status_connect_separator "no"
-# stop catppuccin config theme
-
-set -sg escape-time 10
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.tmux/plugins/tpm/tpm'
