--- a/.tmux.conf
+++ b/.tmux.conf
@@ -61,6 +61,7 @@ bind p previous-window
 set -g @plugin 'catppuccin/tmux'
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
+set -g @plugin 'joshmedeski/t-smart-tmux-session-manager'
 
 # Other examples:
 # set -g @plugin 'github_username/plugin_name'
@@ -71,6 +72,11 @@ set -g @plugin 'tmux-plugins/tmux-sensible'
 # catppuccin config
 set -g @catppuccin_flavour 'mocha'
 set -g @catppuccin_status_modules_right "application session date_time"
+
+# joshmedeski/t-smart-tmux-session-manager
+bind-key x kill-pane # skip "kill-pane 1? (y/n)" prompt
+set -g detach-on-destroy off  # don't exit from tmux when closing a session
+set -g @t-fzf-prompt '  '
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.tmux/plugins/tpm/tpm'
