--- a/.tmux.conf
+++ b/.tmux.conf
@@ -38,6 +38,15 @@ bind - split-window -v -c "#{pane_current_path}"
 unbind '"'
 unbind %
 
+# bind Alt + n to create new window
+bind-key -n M-n new-window
+
+# bind Alt + 1-9 to switch windows
+bind-key -n M-1 select-window -t :1
+bind-key -n M-2 select-window -t :2
+bind-key -n M-3 select-window -t :3
+bind-key -n M-4 select-window -t :4
+
 set-option -g allow-rename off
 
 # start with window 1 (instead of 0)
@@ -48,10 +57,6 @@ set -g pane-base-index 1
 
 # open new windows in the current path
 bind c new-window -c "#{pane_current_path}"
-
-# bind `p` key to switch to the previous window
-unbind p
-bind p previous-window
 
 #################################
 ### PLUGIN WITH THEME CHANGES ###
