--- a/.tmux.conf
+++ b/.tmux.conf
@@ -76,7 +76,7 @@ set -g @plugin 'joshmedeski/t-smart-tmux-session-manager'
 
 # catppuccin config
 set -g @catppuccin_flavour 'mocha'
-set -g @catppuccin_status_modules_right "application session date_time"
+set -g @catppuccin_status_modules_right "application date_time"
 
 # joshmedeski/t-smart-tmux-session-manager
 bind-key x kill-pane # skip "kill-pane 1? (y/n)" prompt
