chore(tmux): fix error when switch pane or window if there is only 1 window/pane

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -4,23 +4,15 @@ set -g prefix C-a
 
 # Reload tmux config
 unbind r
-bind r source-file ~/.tmux.conf \; display "Reloaded ~/.tmux.conf"
+bind r source-file ~/.tmux.conf \; display "Reloading..."
 
 ## Use Alt + `vim motion (hjkl)` keys to switch panes or windows
-
-# this is old configuration.
-#bind -n M-H previous-window
-#bind -n M-L next-window
-#bind -n M-h select-pane -L
-#bind -n M-l select-pane -R
-
 # this key binding will check if there is no pane at left or right, then it will switch to window
-bind -n M-h run-shell "if [ $(tmux display-message -p '#{pane_at_left}') -ne 1 ]; then tmux select-pane -L; else tmux select-window -p; fi"
-bind -n M-l run-shell "if [ $(tmux display-message -p '#{pane_at_right}') -ne 1 ]; then tmux select-pane -R; else tmux select-window -n; fi"
+bind -n M-h if-shell "[ $(tmux display-message -p '#{pane_at_left}') -eq 1 ]" "select-window -p" "select-pane -L"
+bind -n M-l if-shell "[ $(tmux display-message -p '#{pane_at_right}') -eq 1 ]" "select-window -n" "select-pane -R"
 
 bind -n M-k select-pane -U
 bind -n M-j select-pane -D
-
 
 # override default terminal colors
 # *it was has different color of tmux between default terminal color
