refactor datetime tmux

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -69,6 +69,7 @@ set -g @plugin 'joshmedeski/t-smart-tmux-session-manager'
 # catppuccin config
 set -g @catppuccin_flavour 'mocha'
 set -g @catppuccin_status_modules_right "application date_time"
+set -g @catppuccin_date_time_text "%Y-%m-%d %H:%M %A"
 
 # joshmedeski/t-smart-tmux-session-manager
 bind-key x kill-pane # skip "kill-pane 1? (y/n)" prompt
