--- a/.tmux.conf
+++ b/.tmux.conf
@@ -64,6 +64,7 @@ set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'omerxx/tmux-sessionx'
 set -g @plugin 'tmux-plugins/tmux-yank'
 set -g @plugin 'omerxx/tmux-floax'
+set -g @plugin 'joshmedeski/t-smart-tmux-session-manager'
 
 # catppuccin config
 set -g @catppuccin_flavour 'mocha'
@@ -78,20 +79,9 @@ set -g @catppuccin_status_right_separator ""
 bind-key x kill-pane # skip "kill-pane 1? (y/n)" prompt
 set -g detach-on-destroy off  # don't exit from tmux when closing a session
 
-bind-key "j" run-shell "sesh connect \"$(
-	sesh list | fzf-tmux -p 55%,60% \
-		--no-sort --ansi --border-label ' Tmux Sessions & Zoxide History ' --prompt '⚡  ' \
-		--header '  ^a all ^t tmux ^g configs ^x zoxide ^d tmux kill ^f find' \
-		--bind 'tab:down,btab:up' \
-		--bind 'ctrl-a:change-prompt(⚡  )+reload(sesh list)' \
-		--bind 'ctrl-t:change-prompt(🪟  )+reload(sesh list -t)' \
-		--bind 'ctrl-g:change-prompt(⚙️  )+reload(sesh list -c)' \
-		--bind 'ctrl-x:change-prompt(📁  )+reload(sesh list -z)' \
-		--bind 'ctrl-f:change-prompt(🔎  )+reload(fd -H -d 2 -t d -E .Trash . ~)' \
-		--bind 'ctrl-d:execute(tmux kill-session -t {})+change-prompt(⚡  )+reload(sesh list)'
-)\""
-
 set -g @floax-change-path 'false'
+set -g @t-bind "j"
+set -g @t-fzf-prompt '  '
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.tmux/plugins/tpm/tpm'
