chore(code): aded redhat telemetry field

--- a/.config/Code/User/settings.json
+++ b/.config/Code/User/settings.json
@@ -162,4 +162,5 @@
   "[php]": {
     "editor.defaultFormatter": "bmewburn.vscode-intelephense-client"
   },
+  "redhat.telemetry.enabled": true,
 }
