--- a/.config/hypr/hyprland/general.conf
+++ b/.config/hypr/hyprland/general.conf
@@ -1,6 +1,5 @@
 monitor=,preferred,auto,auto
 
-# For all categories, see https://wiki.hyprland.org/Configuring/Variables/
 input {
     kb_layout = us
     follow_mouse = 1
@@ -9,27 +8,24 @@ input {
     }
     sensitivity = 0
     accel_profile=flat
-    # force_no_accel=true
 }
 
 general {
     gaps_in = 4
-    gaps_out = 8 #20 
+    gaps_out = 8
     border_size = 2
     col.active_border = rgba(33ccffee) rgba(00ff99ee) 45deg
     col.inactive_border = rgba(595959aa)
     layout = dwindle
     no_focus_fallback = true
-    # Please see https://wiki.hyprland.org/Configuring/Tearing/ before you turn this on
     allow_tearing = false
 }
 
 decoration {
-    # active_opacity = 0.8
     rounding = 10
     blur {
         enabled = true
-        size = 5 
+        size = 3 
         passes = 3 
         ignore_opacity = true
         special = true
@@ -40,7 +36,6 @@ decoration {
 
 animations {
     enabled = true
-    # Some default animations, see https://wiki.hyprland.org/Configuring/Animations/ for more
     bezier = myBezier, 0.05, 0.9, 0.1, 1.05
     animation = windows, 1, 7, myBezier
     animation = windowsOut, 1, 7, default, popin 80%
@@ -50,13 +45,11 @@ animations {
     animation = workspaces, 1, 6, default
 }
 
-# See https://wiki.hyprland.org/Configuring/Dwindle-Layout/ for more
 dwindle {
-    pseudotile = true # master switch for pseudotiling. Enabling is bound to mainMod + P in the keybinds section below
-    preserve_split = true # you probably want this
+    pseudotile = true
+    preserve_split = true
 }
 
-# See https://wiki.hyprland.org/Configuring/Master-Layout/ for more
 master {
     new_status = master
 }
@@ -70,25 +63,5 @@ misc {
     disable_hyprland_logo = true
     mouse_move_enables_dpms = true
     key_press_enables_dpms = true
-    focus_on_activate = true
+    # focus_on_activate = true
 }
-
-# See https://wiki.hyprland.org/Configuring/Keywords/#per-device-input-configs for more
-# device {
-#     name = pixart-opticalmouse
-#     sensitivity = -0.75
-# }
-
-device {
-    name = beken-usb-gaming-mouse
-    sensitivity = -0.40
-}
-
-# device {
-#     name = oni-r1-bt2-mouse
-#     sensitivity = -0.40
-# }
-# device {
-#     name = syna7db5:01-06cb:cd41-touchpad
-#     sensitivity = 0.18
-# }
