--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -10,6 +10,8 @@ enable_audio_bell           no
 confirm_os_window_close     0
 window_margin_width         5
 background_opacity          0.80
+allow_remote_control        yes
+
 
 # BEGIN_KITTY_THEMb
 # Catppuccin-Mocha
