chore: replace t-smart-session-manager to sesh and added its configuration

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -64,7 +64,6 @@ set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'omerxx/tmux-sessionx'
 set -g @plugin 'tmux-plugins/tmux-yank'
 set -g @plugin 'omerxx/tmux-floax'
-set -g @plugin 'joshmedeski/t-smart-tmux-session-manager'
 
 # catppuccin config
 set -g @catppuccin_flavour 'mocha'
@@ -80,8 +79,10 @@ bind-key x kill-pane # skip "kill-pane 1? (y/n)" prompt
 set -g detach-on-destroy off  # don't exit from tmux when closing a session
 
 set -g @floax-change-path 'false'
-set -g @t-bind "j"
-set -g @t-fzf-prompt '  '
+
+bind-key "j" display-popup -E -w 40% "sesh connect \"$(
+	sesh list --hide-attached -i | gum filter --limit 2 --placeholder 'Pick a dir to open as an tmux session' --height 50 --prompt='⚡'
+)\""
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.tmux/plugins/tpm/tpm'
