chore(hypr): added env for gpu case

--- a/.config/hypr/hyprland/env.conf
+++ b/.config/hypr/hyprland/env.conf
@@ -22,3 +22,6 @@
 
 env = QT_QPA_PLATFORMTHEME,qt6ct # change to qt6ct if you have that
 env = XCURSOR_SIZE,24
+
+env = LIBVA_DRIVER_NAME,radeonsi
+env = VDPAU_DRIVER,radeonsi
