chore(tmux): replaced j using fzf instead of gum

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -80,8 +80,10 @@ set -g detach-on-destroy off  # don't exit from tmux when closing a session
 
 set -g @floax-change-path 'false'
 
-bind-key "j" display-popup -E -w 40% "sesh connect \"$(
-	sesh list --hide-attached -i | gum filter --limit 2 --placeholder 'Pick a dir to open as an tmux session' --height 50 --prompt='⚡'
+bind-key "j" run-shell "sesh connect \"$(
+	sesh list --hide-attached | fzf-tmux -p 55%,60% \
+		--no-sort --ansi --layout reverse --border-label \
+        ' Pick a dir to open as an tmux session ' --prompt '⚡  ' \
 )\""
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
