chore(Code): added filed to ensure overwrite file

--- a/.config/Code/User/settings.json
+++ b/.config/Code/User/settings.json
@@ -163,4 +163,5 @@
     "editor.defaultFormatter": "bmewburn.vscode-intelephense-client"
   },
   "redhat.telemetry.enabled": true,
+  "files.saveConflictResolution": "overwriteFileOnDisk",
 }
