chore(hyprland): fix breaking change

--- a/.config/hypr/hyprland/keybinds.conf
+++ b/.config/hypr/hyprland/keybinds.conf
@@ -20,7 +20,7 @@ bind = ALT, F4, exec, wlogout # exit hyprland session
 bind = $mainMod, S, togglesplit # support in dwindle layout
 bind = $mainMod, F, fullscreen, 1   # maximize 
 bind = $mainMod SHIFT, F, fullscreen
-bind = ALT, F, fakefullscreen
+bind = ALT, F, fullscreenstate
 
 bind = $mainMod, Tab, cyclenext # cycle window layer in floating mode
 bind = $mainMod, Tab, bringactivetotop 
