chore(hyprland): added nm-applet to startup

--- a/.config/hypr/hyprland/startup.conf
+++ b/.config/hypr/hyprland/startup.conf
@@ -2,3 +2,4 @@ exec-once = $HOME/.config/hypr/hyprland/scripts/wallpaper.sh
 exec-once = waybar
 exec-once = /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1
 exec-once = hypridle
+exec-once = nm-applet
