chore(tmux): added binding stuff to sesh

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -84,6 +84,14 @@ bind-key "j" run-shell "sesh connect \"$(
 	sesh list --hide-attached | fzf-tmux -p 55%,60% \
 		--no-sort --ansi --layout reverse --border-label \
         ' Pick a dir to open as an tmux session ' --prompt '⚡  ' \
+		--header '  ^a all ^t tmux ^g configs ^x zoxide ^d tmux kill ^f find' \
+		--bind 'tab:down,btab:up' \
+		--bind 'ctrl-a:change-prompt(⚡  )+reload(sesh list)' \
+		--bind 'ctrl-t:change-prompt(🪟  )+reload(sesh list -t)' \
+		--bind 'ctrl-g:change-prompt(⚙️  )+reload(sesh list -c)' \
+		--bind 'ctrl-x:change-prompt(📁  )+reload(sesh list -z)' \
+		--bind 'ctrl-f:change-prompt(🔎  )+reload(fd -H -d 2 -t d -E .Trash . ~)' \
+		--bind 'ctrl-d:execute(tmux kill-session -t {})+change-prompt(⚡  )+reload(sesh list)'
 )\""
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
