chore(hyprland): clean window rule

--- a/.config/hypr/hyprland/window-rule.conf
+++ b/.config/hypr/hyprland/window-rule.conf
@@ -2,7 +2,7 @@
 
 windowrule = float, ^(Spotify)$ 
 windowrule = workspace special:magic, ^(Spotify)$
-windowrulev2 = opacity 0.80, class:Spotify
+windowrulev2 = opacity 0.80,class:^(Spotify)$
 
 windowrule = float, title:^(OBS)(.*)$
 windowrule = workspace special:magic, title:^(OBS)(.*)$
