chore(tmux)!: some refactor and added currly undercurl support
tested only in kitty terminal. not sure about others terminal. that's
why i added suffex ! for breaking changes

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,63 +1,31 @@
-#!/usr/bin/env bash
-
-# change the default prefix from C-b to C-a
-unbind C-b
 set -g prefix C-a
 
-# Reload tmux config
-unbind r
-bind r source-file ~/.tmux.conf \; display "Reloading..."
+# NOTE: This is make the key bindings in example <C-S-d> not working but make curly red undercurl by kitty support. 
+# About key bindings issue, see this PR https://github.com/tmux/tmux/pull/4038
+set -g default-terminal "${TERM}" 
+set -as terminal-overrides ',*:Smulx=\E[4::%p1%dm'
+set -as terminal-overrides ',*:Setulc=\E[58::2::%p1%{65536}%/%d::%p1%{256}%/%{255}%&%d::%p1%{255}%&%d%;m'
 
-## Use Alt + `vim motion (hjkl)` keys to switch panes or windows
-# this key binding will check if there is no pane at left or right, then it will switch to window
-bind -n M-h if-shell "[ $(tmux display-message -p '#{pane_at_left}') -eq 1 ]" "select-window -p" "select-pane -L"
-bind -n M-l if-shell "[ $(tmux display-message -p '#{pane_at_right}') -eq 1 ]" "select-window -n" "select-pane -R"
-bind -n M-k select-pane -U
-bind -n M-j select-pane -D
-
-## override default terminal colors
-# it was has different color of tmux between default terminal color
-set -g default-terminal "xterm-256color"
-set-option -ga terminal-overrides ",xterm-256color:Tc"
-
-# enable image preview when use yazi
+# Enable image preview when use yazi
 set -ga update-environment TERM
 set -ga update-environment TERM_PROGRAM
 
-# needed for image.nvim
-set -gq allow-passthrough on
+# Needed for image.nvim
+set -g allow-passthrough on
 set -g visual-activity off
 
 set -g mouse on
 set -g mode-keys vi
-
 set -sg escape-time 10
 
-# split panes using | and -, make sure they open in the same path
-bind | split-window -h -c "#{pane_current_path}"
-bind - split-window -v -c "#{pane_current_path}"
-unbind '"'
-unbind %
+set -g allow-rename on
 
-# bind Alt + n to create new window
-bind-key -n M-n new-window
-
-# bind Alt + 1-9 to switch windows
-bind-key -n M-1 select-window -t :1
-bind-key -n M-2 select-window -t :2
-bind-key -n M-3 select-window -t :3
-bind-key -n M-4 select-window -t :4
-
-set-option -g allow-rename off
-
-set -g base-index 1 # start with window 1 (instead of 0)
-set -g pane-base-index 1 # start with pane 1
-
-bind c new-window -c "#{pane_current_path}" # open new windows in the current path
+set -g base-index 1 
+set -g pane-base-index 1
 
 set -g status-position top # put the status bar at the top
+set -g detach-on-destroy off  # don't exit from tmux when closing a session
 
-# List of plugins
 set -g @plugin 'catppuccin/tmux'
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
@@ -65,7 +33,6 @@ set -g @plugin 'omerxx/tmux-sessionx'
 set -g @plugin 'tmux-plugins/tmux-yank'
 set -g @plugin 'omerxx/tmux-floax'
 
-# catppuccin config
 set -g @catppuccin_flavour 'mocha'
 set -g @catppuccin_window_left_separator ""
 set -g @catppuccin_window_right_separator " "
@@ -75,24 +42,54 @@ set -g @catppuccin_status_modules_right "user host"
 set -g @catppuccin_status_left_separator  " "
 set -g @catppuccin_status_right_separator ""
 
-bind-key x kill-pane # skip "kill-pane 1? (y/n)" prompt
-set -g detach-on-destroy off  # don't exit from tmux when closing a session
-
 set -g @floax-change-path 'false'
 
-bind-key "j" run-shell "sesh connect \"$(
+# Change the default prefix from C-b to C-a
+unbind C-b
+bind C-a send-prefix
+
+bind r source-file ~/.tmux.conf \; display-message "Config reloaded"
+
+# Use Alt + `vim motion (hjkl)` keys to switch panes or windows
+bind -n M-h if-shell "[ $(tmux display-message -p '#{pane_at_left}') -eq 1 ]" "select-window -p" "select-pane -L"
+bind -n M-l if-shell "[ $(tmux display-message -p '#{pane_at_right}') -eq 1 ]" "select-window -n" "select-pane -R"
+bind -n M-k select-pane -U
+bind -n M-j select-pane -D
+
+bind v split-window -h -c "#{pane_current_path}"
+bind s split-window -v -c "#{pane_current_path}"
+unbind '"'
+unbind %
+
+# bind Alt + n to create new window
+bind -n M-n new-window
+
+# bind Alt + 1-4 to switch windows
+bind -n M-1 select-window -t :1
+bind -n M-2 select-window -t :2
+bind -n M-3 select-window -t :3
+bind -n M-4 select-window -t :4
+
+bind x kill-pane # skip "kill-pane 1? (y/n)" prompt
+
+bind -r -T prefix _ resize-pane -L 20
+bind -r -T prefix + resize-pane -R 20
+bind -r -T prefix - resize-pane -D 7
+bind -r -T prefix = resize-pane -U 7
+
+bind j run-shell "sesh connect \"\$(\
 	sesh list --hide-attached | fzf-tmux -p 55%,60% \
 		--no-sort --ansi --layout reverse --border-label \
-        ' Pick a dir to open as an tmux session ' --prompt '⚡  ' \
-		--header '  ^a all ^t tmux ^g configs ^x zoxide ^d tmux kill ^f find' \
+        'Pick a dir to open as an tmux session' --prompt '⚡  ' \
+		--header '^a all ^t tmux ^g configs ^x zoxide ^d tmux kill ^f find' \
 		--bind 'tab:down,btab:up' \
 		--bind 'ctrl-a:change-prompt(⚡  )+reload(sesh list)' \
 		--bind 'ctrl-t:change-prompt(🪟  )+reload(sesh list -t)' \
 		--bind 'ctrl-g:change-prompt(⚙️  )+reload(sesh list -c)' \
 		--bind 'ctrl-x:change-prompt(📁  )+reload(sesh list -z)' \
 		--bind 'ctrl-f:change-prompt(🔎  )+reload(fd -H -d 2 -t d -E .Trash . ~)' \
-		--bind 'ctrl-d:execute(tmux kill-session -t {})+change-prompt(⚡  )+reload(sesh list)'
-)\""
+		--bind 'ctrl-d:execute(tmux kill-session -t {})+change-prompt(⚡  )+reload(sesh list)' \
+    )\""
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.tmux/plugins/tpm/tpm'
