chore(sesh): changed name and added note session

--- a/.config/sesh/sesh.toml
+++ b/.config/sesh/sesh.toml
@@ -3,5 +3,9 @@ name = "Home 🏠"
 path = "~"
 
 [[session]]
-name = "Neovim Configuration 📝"
+name = "Neovim Conf 💻"
 path = "~/.config/nvim"
+
+[[session]]
+name = "Notes 📝"
+path = "~/Notes/aquila-notes/"
