chore(kitty): added map for ctrl+backspace

--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -12,6 +12,7 @@ window_margin_width         5
 background_opacity          0.80
 allow_remote_control        yes
 
+map ctrl+backspace send_text all \x17
 
 # BEGIN_KITTY_THEMb
 # Catppuccin-Mocha
