--- a/.config/spicetify/config-xpui.ini
+++ b/.config/spicetify/config-xpui.ini
@@ -1,26 +1,26 @@
 [Setting]
-always_enable_devtools = 0
-spotify_path           = /home/aquila/.local/share/spotify-launcher/install/usr/share/spotify/
-current_theme          = Comfy
+spotify_path           = /opt/spotify/
+color_scheme           = Comfy
 inject_theme_js        = 1
 inject_css             = 1
-replace_colors         = 1
 overwrite_assets       = 1
-check_spicetify_update = 1
-prefs_path             = /home/aquila/.config/spotify/prefs
-color_scheme           = Comfy
 spotify_launch_flags   = 
+always_enable_devtools = 0
+prefs_path             = /home/aquila/.config/spotify/prefs
+current_theme          = Comfy
+replace_colors         = 1
+check_spicetify_update = 1
 
 [Preprocesses]
+expose_apis        = 1
 disable_sentry     = 1
 disable_ui_logging = 1
 remove_rtl_rule    = 1
-expose_apis        = 1
 
 [AdditionalOptions]
 extensions            = 
 custom_apps           = marketplace
-sidebar_config        = 1
+sidebar_config        = 0
 home_config           = 1
 experimental_features = 1
 
@@ -28,5 +28,5 @@ experimental_features = 1
 
 ; DO NOT CHANGE!
 [Backup]
-version = 1.2.42.290.g242057a2
-with    = 2.37.0
+version = 1.2.48.405.gf2c48e6f
+with    = 2.38.4
