chore(hyprland): follow latest breaking change

--- a/.config/hypr/hyprland/general.conf
+++ b/.config/hypr/hyprland/general.conf
@@ -30,8 +30,9 @@ decoration {
         passes = 4 
         ignore_opacity = true
         special = true
+    shadow {
+        enabled = false
     }
-    drop_shadow = no
 }
 
 
