chore(starship): enabled status

--- a/starship.toml
+++ b/starship.toml
@@ -171,3 +171,7 @@ style_root = 'black bold'
 format = '[$user]($style)'
 disabled = false
 show_always = true
+
+[status]
+format = '[$status]($style) '
+disabled = false
