chore(hyprland): updated window rule

--- a/.config/hypr/hyprland/window-rule.conf
+++ b/.config/hypr/hyprland/window-rule.conf
@@ -25,8 +25,9 @@ windowrulev2 = opacity 0.85, class:obsidian
 windowrulev2 = opacity 0.85, title:^(Visual Studio Code)(.*)$
 windowrulev2 = opacity 0.85, title:(- Qobuz Web Player)
 
-windowrulev2 = suppressevent['maximize'], class:.*
 windowrulev2 = float, class:xdm-app
 windowrulev2 = pin,title:^(Picture-in-Picture)$ 
 windowrulev2 = float, title:^(Picture-in-Picture)$
-windowrulev2 = float, class:nmtui
+
+windowrulev2 = nofocus,class:^$,title:^$,xwayland:1,floating:1,fullscreen:0,pinned:0 # Fix some dragging issues with XWayland
+windowrulev2 = suppressevent maximize, class:.* # Ignore maximize requests from apps. You'll probably like this.
