--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -11,6 +11,7 @@ confirm_os_window_close     0
 window_margin_width         5
 background_opacity          0.80
 allow_remote_control        yes
+cursor_trail                1
 
 map ctrl+backspace send_text all \x17
 
