chore(tmux): make tmux load current shell

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -3,6 +3,7 @@ set -g prefix C-a
 # NOTE: This is make the key bindings in example <C-S-d> not working but make curly red undercurl by kitty support. 
 # About key bindings issue, see this PR https://github.com/tmux/tmux/pull/4038
 set -g default-terminal "${TERM}" 
+set -g default-command "${SHELL}"
 set -as terminal-overrides ',*:Smulx=\E[4::%p1%dm'
 set -as terminal-overrides ',*:Setulc=\E[58::2::%p1%{65536}%/%d::%p1%{256}%/%{255}%&%d::%p1%{255}%&%d%;m'
 
