--- a/.config/hypr/hyprland/window-rule.conf
+++ b/.config/hypr/hyprland/window-rule.conf
@@ -3,14 +3,17 @@
 windowrule = float, ^(Spotify)$ 
 windowrule = workspace special:magic, ^(Spotify)$
 windowrulev2 = opacity 0.80,class:^(Spotify)$
+windowrulev2 = size 865 646, class:^(Spotify)$
+windowrulev2 = move 51 69, class:^(Spotify)$
 
 windowrule = float, title:^(OBS)(.*)$
 windowrule = workspace special:magic, title:^(OBS)(.*)$
 
-windowrule = float, title:^(Discord)(.*)$
-windowrule = workspace special:magic, title:^(Discord)(.*)$
 windowrulev2 = opacity 0.85, class:discord
-windowrule = center, title:^(Discord)(.*)$
+windowrulev2 = float, class:discord
+windowrulev2 = workspace special:magic, class:discord
+windowrulev2 = size 1149 630, class:discord
+windowrulev2 = center, class:discord
 
 windowrule = workspace special:magic, tidal-hifi
 windowrule = float, tidal-hifi
@@ -26,6 +29,7 @@ windowrulev2 = opacity 0.85, title:^(Visual Studio Code)(.*)$
 windowrulev2 = opacity 0.85, title:(- Qobuz Web Player)
 
 windowrulev2 = float, class:xdm-app
+
 windowrulev2 = pin,title:^(Picture-in-Picture)$ 
 windowrulev2 = float, title:^(Picture-in-Picture)$
 
