--- a/.config/hypr/hypridle.conf
+++ b/.config/hypr/hypridle.conf
@@ -1,16 +1,13 @@
-# NOTE: Stolen from https://github.com/end-4/dots-hyprland/blob/main/.config/hypr/hypridle.conf
-$lock_cmd = pidof hyprlock || hyprlock
-# $suspend_cmd = systemctl suspend || loginctl suspend
-
 general {
-    lock_cmd = $lock_cmd
-    before_sleep_cmd = $lock_cmd
+    lock_cmd = pidof hyprlock || hyprlock       # avoid starting multiple hyprlock instances.
+    before_sleep_cmd = loginctl lock-session    # lock before suspend.
+    after_sleep_cmd = hyprctl dispatch dpms on  # to avoid having to press a key twice to turn on the display.
 }
 
 # Lock the screen after 30mins of inactivity, it will go to hyprlock
 listener {
     timeout = 1800 # 30mins
-    on-timeout = $lock_cmd
+    on-timeout = loginctl lock-session
 }
 
 # Turn off the screen after 1 hour of inactivity
@@ -20,8 +17,8 @@ listener {
     on-resume = hyprctl dispatch dpms on
 }
 
-# Sleep the system after 2 hours of inactivity
-# listener {
-#     timeout = 7200 # 2hour
-#     on-timeout = $suspend_cmd
-# }
+# Sleep the system after 3 hours of inactivity
+listener {
+    timeout = 10800 # 3hours
+    on-timeout = systemctl suspend
+}
