chore(hypr): added window rule for anydesk application

--- a/.config/hypr/hyprland/window-rule.conf
+++ b/.config/hypr/hyprland/window-rule.conf
@@ -35,3 +35,5 @@ windowrulev2 = float, title:^(Picture-in-Picture)$
 
 windowrulev2 = nofocus,class:^$,title:^$,xwayland:1,floating:1,fullscreen:0,pinned:0 # Fix some dragging issues with XWayland
 windowrulev2 = suppressevent maximize, class:.* # Ignore maximize requests from apps. You'll probably like this.
+
+windowrulev2 = float, class:^(Anydesk)$,title:^(anydesk)$
