fix(hyprland): pavucontrol can't float and center

--- a/.config/hypr/hyprland/window-rule.conf
+++ b/.config/hypr/hyprland/window-rule.conf
@@ -21,8 +21,8 @@ windowrule = center, tidal-hifi
 windowrule = size 1149 630, tidal-hifi
 windowrule = opacity 0.78, tidal-hifi
 
-windowrule = float, pavucontrol
-windowrule = center,^(pavucontrol) 
+windowrulev2 = float, title:^(Volume Control)$
+windowrulev2 = center, title:^(Volume Control)$
 
 windowrulev2 = opacity 0.85, class:obsidian
 windowrulev2 = opacity 0.85, title:^(Visual Studio Code)(.*)$
