feat(hyprland): added keymaps for multi monitor

--- a/.config/hypr/hyprland/keybinds.conf
+++ b/.config/hypr/hyprland/keybinds.conf
@@ -79,6 +79,10 @@ bind = $mainMod SHIFT, 0, movetoworkspace, 10
 bind = $mainMod, A, togglespecialworkspace, magic
 bind = $mainMod SHIFT, A, movetoworkspace, special:magic
 
+# mutli monitor
+bind = $mainMod SHIFT, comma, movecurrentworkspacetomonitor, l
+bind = $mainMod, backspace, focusmonitor, +1
+
 #MOUSE BINDING
 # Scroll through existing workspaces with mainMod + scroll
 bind = $mainMod, mouse_down, workspace, e+1
