refactor: added some newline and change commented ine

--- a/.config/hypr/hyprland/keybinds.conf
+++ b/.config/hypr/hyprland/keybinds.conf
@@ -87,6 +87,7 @@ bind = $mainMod, backspace, focusmonitor, +1
 # Scroll through existing workspaces with mainMod + scroll
 bind = $mainMod, mouse_down, workspace, e+1
 bind = $mainMod, mouse_up, workspace, e-1
+
 # Move/resize windows with mainMod + LMB/RMB and dragging
 bindm = $mainMod, mouse:272, movewindow
 bindm = $mainMod, mouse:273, resizewindow
@@ -97,7 +98,7 @@ bind = $mainMod CTRL, right, resizeactive, 30 0
 bind = $mainMod CTRL, up, resizeactive, 0 -30
 bind = $mainMod CTRL, down, resizeactive, 0 30
 
-# Switch workspaces relative to the active workspace with mainMod + CTRL + [←→]
+# Switch workspaces relative to the active workspace with mainMod + CTRL + Shift + L|H
 bind = $mainMod SHIFT, L, workspace, r+1 
 bind = $mainMod SHIFT, H, workspace, r-1
 
@@ -109,8 +110,10 @@ bind = $mainMod, TAB, changegroupactive
 #MISC
 # Screenshot a window
 bind = $mainMod, PRINT, exec, hyprshot -m window
+
 # Screenshot a monitor
 bind = ALT SHIFT, S, exec, $srcScripts/screenshot.sh
 bind = , PRINT, exec, hyprshot -m output
+
 # Screenshot a region
 bind = $mainMod SHIFT, S, exec, hyprshot -m region
