chore(hyprland): updated window rules for anydesk and showmethekey

--- a/.config/hypr/hyprland/window-rule.conf
+++ b/.config/hypr/hyprland/window-rule.conf
@@ -33,7 +33,17 @@ windowrulev2 = float, class:xdm-app
 windowrulev2 = pin,title:^(Picture-in-Picture)$ 
 windowrulev2 = float, title:^(Picture-in-Picture)$
 
+windowrulev2 = float, class:^(Anydesk)$,title:^(anydesk)$
+windowrulev2 = pin, class:^(Anydesk)$,title:^(anydesk)$
+
+windowrulev2 = pin, title:Floating Window - Show Me The Key
+windowrulev2 = float, title:Floating Window - Show Me The Key
+windowrulev2 = noinitialfocus, title:Floating Window - Show Me The Key
+# windowrulev2 = nofocus, title:Floating Window - Show Me The Key
+windowrulev2 = suppressevent, title:Floating Window - Show Me The Key
+windowrulev2 = size 264 45, title:Floating Window - Show Me The Key
+windowrulev2 = move 545 676, title:Floating Window - Show Me The Key
+
 windowrulev2 = nofocus,class:^$,title:^$,xwayland:1,floating:1,fullscreen:0,pinned:0 # Fix some dragging issues with XWayland
 windowrulev2 = suppressevent maximize, class:.* # Ignore maximize requests from apps. You'll probably like this.
 
-windowrulev2 = float, class:^(Anydesk)$,title:^(anydesk)$
