--- a/.config/hypr/hyprland/env.conf
+++ b/.config/hypr/hyprland/env.conf
@@ -20,8 +20,10 @@
 # env = wallpaper_path, $HOME/Wallpapers
 # NOTE: i don't know what this commands above works for
 
-env = QT_QPA_PLATFORMTHEME,qt6ct # change to qt6ct if you have that
+env = QT_QPA_PLATFORMTHEME,qt6ct
 env = XCURSOR_SIZE,24
 
 env = LIBVA_DRIVER_NAME,radeonsi
 env = VDPAU_DRIVER,radeonsi
+
+env = SSH_AUTH_SOCK,$XDG_RUNTIME_DIR/ssh-agent.socket
