feat: add clip2path script and kitty shortcut
Adds a script to copy clipboard content to a file and a kitty shortcut to trigger it.

--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -14,6 +14,7 @@ allow_remote_control        yes
 cursor_trail                1
 
 map ctrl+backspace send_text all \x17
+map ctrl+shift+v launch --type=background --allow-remote-control --keep-focus ~/.scripts/clip2path.sh
 
 # BEGIN_KITTY_THEMb
 # Catppuccin-Mocha
