feat(clipboard): add clipboard manager integration
Integrates cclipd and fsel for clipboard history management.
Starts the cclipd daemon on startup and adds a keybind (Mod+D) to open fsel.
Configures window rules for the fsel launcher window.

--- a/.config/hypr/hyprland/keybinds.conf
+++ b/.config/hypr/hyprland/keybinds.conf
@@ -117,3 +117,6 @@ bind = , PRINT, exec, hyprshot -m output
 
 # Screenshot a region
 bind = $mainMod SHIFT, S, exec, hyprshot -m region
+
+# Clipboard manager
+bind = $mainMod, D, exec, kitty --title launcher -e fsel --cclip
