--- a/.config/hypr/hyprland/window-rule.conf
+++ b/.config/hypr/hyprland/window-rule.conf
@@ -47,3 +47,6 @@ windowrulev2 = move 545 676, title:Floating Window - Show Me The Key
 windowrulev2 = nofocus,class:^$,title:^$,xwayland:1,floating:1,fullscreen:0,pinned:0 # Fix some dragging issues with XWayland
 windowrulev2 = suppressevent maximize, class:.* # Ignore maximize requests from apps. You'll probably like this.
 
+# Fsel (Clipboard manager)
+windowrule = float, title:^(launcher)$
+windowrule = size 500 430, title:^(launcher)$
