--- a/.config/hypr/hyprland/startup.conf
+++ b/.config/hypr/hyprland/startup.conf
@@ -3,3 +3,4 @@ exec-once = waybar
 exec-once = /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1
 exec-once = hypridle
 exec-once = nm-applet
+exec-once = cclipd -s 2 -t "image/png" -t "image/*" -t "text/plain;charset=utf-8" -t "text/*" -t "*"
