chore(hypridle): increase suspend timeout to 4 hours

--- a/.config/hypr/hypridle.conf
+++ b/.config/hypr/hypridle.conf
@@ -17,8 +17,9 @@ listener {
     on-resume = hyprctl dispatch dpms on
 }
 
-# Sleep the system after 3 hours of inactivity
+# Sleep the system after 4 hours of inactivity
 listener {
-    timeout = 10800 # 3hours
+    # 4 hours
+    timeout = 14400 # 4hours
     on-timeout = systemctl suspend
 }
