--- a/.config/hypr/hyprland/general.conf
+++ b/.config/hypr/hyprland/general.conf
@@ -1,6 +1,8 @@
 monitor=,preferred,auto,1
 monitor=,preferred,auto,1,mirror,eDP-1
 
+gesture = 3, horizontal, workspace
+
 input {
     kb_layout = us
     follow_mouse = 1
@@ -54,10 +56,6 @@ dwindle {
 
 master {
     new_status = master
-}
-
-gestures {
-    workspace_swipe = true
 }
 
 misc {
